<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BillTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_login">MainActivity</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_bill">Add Bill</string>
    <string name="action_cancel">Cancel</string>

    <!-- Misc -->
    <string name="btn_cancel">Cancel</string>
    <string name="btn_join">Join</string>

    <!-- Login -->
    <string name="login_register">Register</string>
    <string name="login_login">Login</string>
    <string name="login_skip">Skip</string>
    <string name="login_error_email_req">You must enter an email.</string>
    <string name="login_error_password_req">You must enter a password.</string>
    <string name="login_error_password_confirm_req">You must confirm your password.</string>
    <string name="login_error_password_no_match">Your passwords do not match!</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_password_confirm">Confirm Password</string>

    <!-- House -->
    <string name="title_house_join">Join a House</string>
    <string name="title_house_create">Create a House</string>
    <string name="house_add">Add House</string>
    <string name="house_add_with_plus">+ Add House</string>
    <string name="house_id">House Id</string>
    <string name="house_join_description">If you would like to join a house, please enter the code for that house below!</string>
    <string name="house_join">Join House</string>
    <string name="house_join_field_error">You must enter in a house ID.</string>
    <string name="house_error_no_houses_found">No House with the given ID was found.</string>
    <string name="house_error_occurred">An error occurred trying to find the requested House. Please try again.</string>
    <string name="house_create_btn_create">Create</string>
    <string name="house_create_hint_name">House Name</string>
    <string name="house_create_hint_address">Address</string>
    <string name="house_create_error_address_req">You must add an address for the name.</string>
    <string name="house_create_error_name_req">You must add a name for the name.</string>

    <!-- Bills List -->
    <string name="bills_empty">Hooray! There are currently no bills!</string>

    <!-- Adding a bill -->
    <string name="bills_add">Add Bill</string>

    <!-- Categories of bills; TODO Change the array list in the arrays.xml file when adding-->
    <string name="category_cable">Cable/Internet</string>
    <string name="category_gas">Gas</string>
    <string name="category_electric">Electric</string>
    <string name="category_water">Water</string>
    <string name="category_rent">Rent</string>
    <string name="category_other">Other</string>
    <string name="bill_add_result_success">Bill was successfully added!</string>
    <string name="bill_add_result_failure">An error occurred uploading the bill. Please try again!</string>

</resources>
